Fixing button styles on mobile

--- a/src/scss/_button.scss
+++ b/src/scss/_button.scss
@@ -12,6 +12,7 @@
     width: auto;
     background-color: $blue;
     color: $white;
+    font-size: 1em;
 
     &:hover,
     &:focus {
