--- a/src/scss/_utility.scss
+++ b/src/scss/_utility.scss
@@ -86,7 +86,7 @@
     }
 
     > *:last-child {
-        flex-shrink: 1;
+        flex-shrink: 2;
     }
 }
 
