--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -31,7 +31,7 @@ $base-line-height       : 1.618;
 
 $serif-font-family      : Georgia, Times, "Times New Roman", serif;
 $lg-font-size           : 1.2em;
-$sm-font-size           : 0.8em;
+$sm-font-size           : 0.9em;
 
 $border-radius          : 0.15em;
 
